# webgl

./: .gitignore  README.md  index.html  license.txt
GuiLiteTest/: CMakeLists.txt
GuiLiteTest/GuiLiteTest/: CMakeLists.txt
GuiLiteTest/include/: UIWidgets.h  WinUI.h
GuiLiteTest/resource/: icons.aps  icons.rc  resource.h
GuiLiteTest/src/: Consolas_24B.cpp  UIWidgets.cpp  WinUI.cpp  main.cpp
MeshDebugger/: ABuffer.cpp  ABuffer.h  CMakeLists.txt  CadApp.cpp  CadApp.hpp  CanvasApp.cpp  CanvasApp.h  CenterMeshes.cpp  Command.hpp  FloodOutside.cpp  FramedCurve.cpp  FramedCurve.h  Grid3Df.h  Grid3DfIO.cpp  Grid3DfIO.h  HeadApp.cpp  HeadApp.hpp  Hit.h  InflateApp.cpp  InflateApp.h  Lattice.cpp  Lattice.h  MakeDiamondTraining.cpp  MakeHelix.cpp  MakeHelix.h  MarchingCubes.h  MeshUtil.cpp  MeshUtil.h  PackApp.cpp  PackApp.hpp  PointCloud.cpp  PointCloud.h  RasterizeTrig.cpp  RasterizeTrig.h  Simplify.h  SurfacePoint.h  TestBLD.cpp  TestBVH.cpp  TestCDT.cpp  TestColorImage.cpp  (+25 more)
MeshDebugger/glsl/: fs.txt  vs-notex.txt  vs.txt
ScanVis/: CMakeLists.txt  config.txt  configEif.txt  configvis.txt  notes.txt
ScanVis/common/: Array2D.h  Array3D.h  BBox.cpp  Matrix3f.cpp  Matrix3f.h  Transformations.cpp  TrigMesh.cpp  TrigMesh.h  Vec3.h  cxxopts.hpp
ScanVis/include/: AlignImages.hpp  ArrayUtil.hpp  BMPIO.h  BMPWriter.h  ConfigFile.hpp  DepthHistory.h  DualPixel.hpp  FileUtil.hpp  Image.h  Image4bit.h  ImageIO.h  MainWindow.h  OctAnalysis.h  Palette.h  Recon.hpp  SliceToMesh.h  StackColorVol.hpp  TrigMesh.hpp  Vec2ub.h  VolumeIO.hpp  bmp.h  cvMatUtil.hpp  meshutil.h
ScanVis/octave/: ColorDistMat.m  avgColor.m  colorL2.m  logistic.m  tiff2png.m  tiff2pngLossy.m  tiffseq2png.m
ScanVis/sdf/: BitArray.cpp  BitArray.h  CPT.cpp  CPT.h  OBBSlicer.cpp  OBBSlicer.h  SDFMesh.cpp  SparseSet.h  heap.cpp
ScanVis/src/: AlignImages.cpp  ArrayUtil.cpp  Avenir.h  BMPWriter.cpp  ConfigFile.cpp  DepthHistory.cpp  FileUtil.cpp  Font.cpp  Font.h  Image.cpp  Image4bit.cpp  ImageIO.cpp  MainWindow.cpp  MorphOp.cpp  MorphOp.h  OctAnalysis.cpp  Recon.cpp  SliceGen.cpp  SliceGen.h  SliceToMesh.cpp  StackColorVol.cpp  TrigMesh.cpp  VolumeIO.cpp  avenir.cpp  bmp.cpp  cvMatUtil.cpp  main.cpp  meshutil.cpp  old.cpp
SparseSDF/: AdapDF.cpp  AdapDF.h  AdapSDF.cpp  AdapSDF.h  AdapUDF.cpp  AdapUDF.h  Array3D.cpp  ArrayUtil.hpp  BBox.cpp  BBox.h  BitOps.cpp  BitOps.h  CMakeLists.txt  FastSweep.cpp  FastSweep.h  FixedGrid3D.h  Grid3Df.cpp  Inflate.cpp  Inflate.h  MarchingCubes.cpp  MarchingCubes.h  MergeClosePoints.cpp  MergeClosePoints.h  ObjLoader.cpp  PointTrigDist.cpp  PointTrigDist.h  SDFMesh.cpp  SDFVoxCb.cpp  SDFVoxCb.h  SimpleVoxCb.h  Sparse3DMap.cpp  Sparse3DMap.h  SparseNode4.h  SurfacePoint.h  ThreadPool.cpp  ThreadPool.h  TrigMesh.cpp  TrigMesh.h  Vec2.h  VoxCallback.h  (+6 more)
SparseSDF/old/: CPT.cpp  CPT.h  GridNode.h  GridNodeLeaf.h  GridTree.h  OBBSlicer.cpp  SDFGridTree.cpp  SDFGridTree.h  SparseSet.h
UILib/: .clang-format  ArrayUtil.cpp  BBox.cpp  CMakeLists.txt  Camera.cpp  GLRender.cpp  GLTex.cpp  ImageIO.cpp  ImageUtils.cpp  KeyboardInput.cpp  Matrix3f.cpp  ObjLoader.cpp  Quat4f.cpp  Scene.cpp  ShallowWater.cpp  StringUtil.cpp  TrigMesh.cpp  UIConf.cpp  UILib.cpp  lodepng.cpp  main.cpp
UILib/glsl/: fs-notex.txt  fs.txt  (+1 more)
Util/: CMakeLists.txt  MedianBlur.h  Stopwatch.h  ThreadPool.cpp  ThreadPool.h  VoxIO.cpp  VoxIO.h  threadsafe_queue.h
WireLattice/: CMakeLists.txt  main.cpp  wire.txt
ZRayCast/: ABuffer.cpp  ABuffer.h  CMakeLists.txt  CompressedLists.h  FixedArray.h  Hit.cpp  RaycastConf.h  ZRaycast.cpp
bullet_exp/: CMakeLists.txt  RigidBodySim.cpp
cli/: CMakeLists.txt  Lattice.cpp  Lattice.h  main.cpp
cpu_pack/: BroadPhase.cpp  BroadPhase.h  CLAUDE.md  CMakeLists.txt  FloodOutside.cpp  FloodOutside.h  GridUtils.cpp  GridUtils.h  MeshConvo.cpp  MeshConvo.h  MeshInfo.cpp  MeshInfo.h  MeshOps.cpp  MeshOps.h  PackBones.cpp  PackBones.h  PackDebugScene.cpp  PackDebugScene.h  PackingOps.cpp  PackingOps.h  PackingPlan.cpp  PackingPlan.h  PackingScene.cpp  PackingScene.h  PointSample.cpp  PointSample.h  RigidBody.cpp  RigidBody.h  RigidTransform.cpp  RigidTransform.h  TestNearestTrig.cpp  TrigGrid.cpp  TrigGrid.h  cpu_pack.code-workspace  cpu_voxelizer.cpp  cpu_voxelizer.h  eig3x3.h  imp_plan.txt  load_trajectories.py  main.cpp  (+2 more)
fann_fit/: CMakeLists.txt  DataPoint.cpp  DataPoint.h  Tests.cpp  ann.cpp  ann.h  ann_train.cpp  ann_train.h  main.cpp
fem/: CMakeLists.txt  CSparseMat.cpp  CSparseMat.h  Element.cpp  Element.h  ElementMesh.cpp  ElementMesh.h  ElementMeshUtil.cpp  ElementMeshUtil.h  FESim.cpp  FESim.hpp  FETrigMesh.cpp  FETrigMesh.hpp  FemApp.cpp  FemApp.hpp  MaterialModel.cpp  MaterialModel.h  Matrix3fSVD.cpp  Matrix3fSVD.h  Quadrature.cpp  Quadrature.h  StableNeo.cpp  StableNeo.h  StrainCorotLin.cpp  StrainCorotLin.h  StrainEne.cpp  StrainEne.h  StrainEneNeo.cpp  StrainEneNeo.h  StrainLin.cpp  StrainLin.h  StringUtil.cpp  StringUtil.h  Tests.cpp  cg_rc.cpp  cg_rc.h  femError.h  main.cpp
imgui_test/: Array2D.cpp  Array2D.h  Array3D.h  BBox.cpp  CMakeLists.txt  Camera.cpp  Camera.h  GLRender.cpp  GLRender.h  GLTex.cpp  GLTex.h  ImageIO.cpp  ImageUtils.cpp  ImageUtils.h  Matrix4f.cpp  Matrix4f.h  Quat4f.h  Timer.cpp  TrigMesh.cpp  TrigMesh.h  UIConf.cpp  UILib.cpp  UILib.h  Vec2.h  Vec3.h  Vec4.h  bmp.cpp  main.cpp
jt/: .gitignore  BitReader.h  BitReaderTest.cpp  CMakeLists.txt  Int32CDP.cpp  Int32CDP.h  JT_defs.cpp  JT_defs.h  lzma_wrapper.cpp  lzma_wrapper.h  main.cpp  reduce_hier.py
mesh_client/: CMakeLists.txt
pbd/: CMakeLists.txt  RigidDemo.cpp
robin/: .gitignore  IMPLEMENTATION_STEPS.txt  notes.txt  pyproject.toml
scroll/: CMakeLists.txt  ConfigFile.cpp  ConfigFile.h  TrigMesh.cpp  TrigMesh.h  Vec3.h  config.txt  main.cpp
sdf_grid/: CMakeLists.txt  main.cpp
water/: Array3D.h  Axis.h  CMakeLists.txt  FastSweep.cpp  FastSweep.h  FileWriter.h  MarchingCubes.cpp  ObjLoader.h  Vec3.h  Water.cpp  Water.h  WaterMPM.cpp  WaterMPM.h  main.cpp
winding/: CMakeLists.txt  Range.cpp  Range.h  ThreadPool.cpp  ThreadPool.h  UT_BVHImpl.h  UT_SolidAngle.cpp  main.cpp
(+613 files in other folders)
