cmake_minimum_required(VERSION 3.16)
set(BIN "wire_lattice")
PROJECT (WireLattice)
add_subdirectory("../Math" "Math")
add_subdirectory("../Mesh" "Mesh")
include_directories(.)
FILE(GLOB EXE_SRC "*.cpp" "*.c")
set(CMAKE_CXX_STANDARD 17)
include_directories("../Math/inc/")
include_directories("../Mesh/inc")
add_executable(${BIN} ${EXE_SRC})
target_link_libraries(${BIN} Mesh MathLib)
