cmake_minimum_required(VERSION 3.16)
set(BIN "inflate")
PROJECT (Inflate)
add_subdirectory("../Math" "Math")
add_subdirectory("../Mesh" "Mesh")
add_subdirectory("../SparseSDF" "SparseSDF")
add_subdirectory("../ImageIO" "ImageIO")
include_directories(.)
FILE(GLOB EXE_SRC "*.cpp" "*.c")
set(CMAKE_CXX_STANDARD 17)
include_directories("../Math/inc/")
include_directories("../Mesh/inc")
include_directories("../ImageIO")
include_directories("../SparseSDF")
include_directories("../Util")
add_executable(${BIN} ${EXE_SRC})
target_link_libraries(${BIN} SparseSDF Mesh MathLib Util ImageIO)
