cmake_minimum_required(VERSION 3.16)
set(BIN "cpu_pack")
PROJECT (CpuPack)
FILE(GLOB EXE_SRC "*.cpp" "*.c")
set(CMAKE_CXX_STANDARD 20)
include_directories(".")
add_subdirectory("../Math" "Math")
add_subdirectory("../Mesh" "Mesh")
add_subdirectory("../ImageIO" "ImageIO")

include_directories("../Math/inc/")
include_directories("../Mesh/inc")
include_directories("../ImageIO")
include_directories("./pocketfft/")
include_directories("../Util")
add_executable(${BIN} ${EXE_SRC})
target_link_libraries(${BIN} Mesh MathLib ImageIO)
