cmake_minimum_required(VERSION 3.16)
PROJECT (MeshClient)
include_directories(include)
include_directories(GridTree/include)
FILE(GLOB EXE_SRC "src/*.cpp" "src/*.c")
set(CMAKE_CXX_STANDARD 17)
add_subdirectory(GridTree)
add_executable(mesh_client ${EXE_SRC} )
target_link_libraries(mesh_client gridtree ws2_32.lib)
