[project]
name = "robin"
version = "0.1.0"
description = "Read-only Robinhood portfolio monitor with Gemini-assisted low-frequency trading strategy"
readme = "IMPLEMENTATION_STEPS.txt"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "google-genai>=1.19",
    "pydantic>=2.9",
    "anyio>=4",
    "websockets>=12",
    "httpx>=0.27",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.dependencies]
python = "3.12.*"
uv = "*"

[tool.pixi.feature.dev.dependencies]
ruff = "*"
pytest = "*"
mypy = "*"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
serve = "uvicorn robin.app:app --host 127.0.0.1 --port 8000"
dev = "uvicorn robin.app:app --reload --host 127.0.0.1 --port 8000"
test = "pytest -q"
lint = "ruff check ."
fmt = "ruff format ."

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
