cmake_minimum_required(VERSION 3.16)
PROJECT (SDFGrid)
add_subdirectory("../Math" "Math")
add_subdirectory("../Mesh" "Mesh")
add_subdirectory("../Util" "Util")
add_subdirectory("../SparseSDF" "SparseSDF")
add_subdirectory("./jsoncpp" "jsoncpp")
include_directories("./jsoncpp")
include_directories(.)
FILE(GLOB EXE_SRC "*.cpp" "*.c")
set(CMAKE_CXX_STANDARD 17)
include_directories("../Math/inc/")
include_directories("../Mesh/inc")
include_directories("../ImageIO")
add_subdirectory("../ImageIO/" "ImageIO")
include_directories("../Util")
include_directories("../SparseSDF")
set(BIN "sdfgrid")
add_executable(${BIN} ${EXE_SRC})
target_link_libraries(${BIN} SparseSDF Mesh ImageIO Util MathLib json)
