cmake_minimum_required(VERSION 3.16)
PROJECT (Water)
add_subdirectory("../imgui_test" "ui")
include_directories(.)
FILE(GLOB EXE_SRC "*.cpp" "*.c")
set(CMAKE_CXX_STANDARD 17)
include_directories("../imgui_test/inc/")
link_directories("../imgui_test/extern/glfw3.3.8")
link_directories("../imgui_test/extern/glew-2.1.0")
add_executable(water ${EXE_SRC} )
target_link_libraries(water UILib imgui glfw3 opengl32 glew32s ws2_32.lib)
