cmake_minimum_required(VERSION 3.20)
set(CMAKE_CXX_STANDARD 20)
set(BIN "winding")
PROJECT (Winding)
include_directories("./")
add_subdirectory("../Math" "Math")
add_subdirectory("../Mesh" "Mesh")
include_directories("../Math/inc/")
include_directories("../Mesh/inc")
FILE(GLOB EXE_SRC "*.cpp" "*.c")
add_executable(${BIN} ${EXE_SRC})
target_link_libraries(${BIN} Mesh MathLib)